--- a/attractions.html
+++ b/attractions.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <ul>
-            <a href="home.html">
+            <a href="index.html">
                 <li class="zoom">HOME</li>
             </a>
             <a href="about.html">
