--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <ul>
-            <a href="home.html">
+            <a href="index.html">
                 <li class="blue zoom">HOME</li>
             </a>
             <a href="about.html">
